Added cursor (and started on ui)

--- a/New-Start/Assets/UI Toolkit/GameCanvas.uxml
+++ b/New-Start/Assets/UI Toolkit/GameCanvas.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/main.uss?fileID=7433441132597879392&amp;guid=3dd53c4ff7ebd7746a030fc70f8bb6b6&amp;type=3#main" />
-    <ui:VisualElement style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; justify-content: flex-start; flex-direction: row; align-items: flex-end;">
+    <ui:VisualElement style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; justify-content: flex-start; flex-direction: column; align-items: flex-end;">
+        <ui:Toggle value="false" />
     </ui:VisualElement>
 </ui:UXML>
