--- a/New-Start/Assets/UI Toolkit/main.uss
+++ b/New-Start/Assets/UI Toolkit/main.uss
@@ -23,23 +23,38 @@
     -unity-background-scale-mode: scale-to-fit;
     position: relative;
     width: 64px;
-    padding-bottom: 5%;
+    padding-bottom: 0;
     height: 64px;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
-.unity-toggle:hover {
+.unity-button:hover {
     background-image: url('project://database/Assets/Tiles/slimes-are-comming.png?fileID=1123865795&guid=b3ded538870f6af44ab9303b657de248&type=3#slimes-are-comming_113');
 }
 
-.unity-toggle__input {
+.unity-button {
     background-color: rgba(188, 188, 188, 0);
     background-image: url('project://database/Assets/Tiles/slimes-are-comming.png?fileID=-811079010&guid=b3ded538870f6af44ab9303b657de248&type=3#slimes-are-comming_114');
     -unity-slice-left: 16;
     -unity-slice-top: 16;
     -unity-slice-right: 16;
     -unity-slice-bottom: 16;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
 }
 
-.unity-toggle:active {
+.unity-button:active {
     background-image: url('project://database/Assets/Tiles/slimes-are-comming.png?fileID=1123865795&guid=b3ded538870f6af44ab9303b657de248&type=3#slimes-are-comming_113');
 }
